Добавлено функция вставки инфы о профиле

--- a/Frontend/html/profile.html
+++ b/Frontend/html/profile.html
@@ -44,18 +44,18 @@
         </div>
         <div class="container content">
           <div class="row base-info">
-            <img src="../assets/photo.png" alt="" class="col-sm-6 col-md-3 photo">
+            <img src="../assets/photo1.jpg" alt="" class="col-sm-6 col-md-3 photo" id="photo">
             <div class="col-6 md-col-2 fio"> 
-              <h3 class="row">Евгений</h3>
-              <h2 class="row">Топаев</h2>
-              <h3 class="row">05.09.1983</h3>
+              <h3 class="row" id="name">Евгений</h3>
+              <h2 class="row" id="surname">Топаев</h2>
+              <h3 class="row" id="birthdate">05.09.1983</h3>
               <div class="row w-75 logo"> 
                 <img src="../assets/logo_club.png" alt="logo_club" class="col-10 col-md-6">
               </div>
             </div>
             <div class="belt-id col-12 col-md-3">
               <img src="../assets/black_belt.jpg" alt="belt" class="col-5 col-md-12">
-              <button class="col-4 col-md-12">ID #0001</button>
+              <button class="col-4 col-md-12" id="id-button">ID #0001</button>
             </div>
           </div>
           <div class="row container achievment">
@@ -65,40 +65,40 @@
 
               <div class="col-12 col-md-4">
                 <h3>Профессионал</h3>
-                <div class="achievment-block row">
+                <div class="achievment-block not-reached row" id="1dan">
                   <div class="achievment-name col-3">
                     1 дан
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Название мероприятия</p>
-                    <p id ="date">12.12.12</p>
+                    <p id="name">Нет в базе</p>
+                    <p id ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block row">
+                <div class="achievment-block not-reached row" id="2dan">
                   <div class="achievment-name col-3">
                     2 дан
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Название мероприятия</p>
-                    <p id ="date">12.12.12</p>
+                    <p id="name">Нет в базе</p>
+                    <p id ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block row">
+                <div class="achievment-block not-reached row" id="3dan">
                   <div class="achievment-name col-3">
                     3 дан
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Название мероприятия</p>
-                    <p id ="date">12.12.12</p>
+                    <p id="name">Нет в базе</p>
+                    <p id ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block row">
+                <div class="achievment-block not-reached row" id="4dan">
                   <div class="achievment-name col-3">
                     4 дан
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Название мероприятия</p>
-                    <p id ="date">12.12.12</p>
+                    <p id="name">Нет в базе</p>
+                    <p id ="date">Не определено</p>
                   </div>
                 </div>
               </div>
@@ -106,98 +106,98 @@
 
               <div class="col-12 col-md-4">
                 <h3>Взрослый уровень</h3>
-                <div class="achievment-block row">
+                <div class="achievment-block not-reached row" id="1ku">
                   <div class="achievment-name ku-1 col-3">
                     1 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Название мероприятия</p>
-                    <p id ="date">12.12.12</p>
+                    <p id="name">Нет в базе</p>
+                    <p id ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block row">
+                <div class="achievment-block not-reached row" id="2ku">
                   <div class="achievment-name ku-2 col-3">
                     2 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Название мероприятия</p>
-                    <p id ="date">12.12.12</p>
+                    <p id="name">Нет в базе</p>
+                    <p id ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block row">
+                <div class="achievment-block not-reached row" id="3ku">
                   <div class="achievment-name ku-3 col-3">
                     3 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Название мероприятия</p>
-                    <p id ="date">12.12.12</p>
+                    <p id="name">Нет в базе</p>
+                    <p id ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block row">
+                <div class="achievment-block not-reached row" id="4ku">
                   <div class="achievment-name ku-4 col-3">
                     4 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Название мероприятия</p>
-                    <p id ="date">12.12.12</p>
+                    <p id="name">Нет в базе</p>
+                    <p id ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block row">
+                <div class="achievment-block not-reached row" id="5ku">
                   <div class="achievment-name ku-5 col-3">
                     5 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Название мероприятия</p>
-                    <p id ="date">12.12.12</p>
+                    <p id="name">Нет в базе</p>
+                    <p id ="date">Не определено</p>
                   </div>
                 </div>
               </div>
 
               <div class="col-12 col-md-4">
                 <h3>Детский уровень</h3>
-                <div class="achievment-block not-reached row">
+                <div class="achievment-block not-reached row" id="1ku-child">
                   <div class="achievment-name ku-1 col-3">
                     1 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Название мероприятия</p>
-                    <p id ="date">12.12.12</p>
+                    <p id="name">Нет в базе</p>
+                    <p id ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block not-reached row">
+                <div class="achievment-block not-reached row" id="2ku-child">
                   <div class="achievment-name ku-2 col-3">
                     2 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Название мероприятия</p>
-                    <p id ="date">12.12.12</p>
+                    <p id="name">Нет в базе</p>
+                    <p id ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block not-reached row">
+                <div class="achievment-block not-reached row" id="3ku-child">
                   <div class="achievment-name ku-3 col-3">
                     3 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Название мероприятия</p>
-                    <p id ="date">12.12.12</p>
+                    <p id="name">Нет в базе</p>
+                    <p id ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block row">
+                <div class="achievment-block not-reached row" id="4ku-child">
                   <div class="achievment-name ku-4 col-3">
                     4 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Название мероприятия</p>
-                    <p id ="date">12.12.12</p>
+                    <p id="name">Нет в базе</p>
+                    <p id ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block row">
+                <div class="achievment-block not-reached row" id="5ku-child">
                   <div class="achievment-name ku-5 col-3">
                     5 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Название мероприятия</p>
-                    <p id ="date">12.12.12</p>
+                    <p id="name">Нет в базе</p>
+                    <p id ="date">Не определено</p>
                   </div>
                 </div>
               </div>
@@ -205,19 +205,14 @@
           </div>           
 
           <div class="seminar-table">
-            <table>
-              <tr>
+            <table id="seminar-table">
+              <tr id="seminar-header">
                 <td class="heading">Дата</td>
                 <td class="heading unvisible bordered">Город</td>
                 <td class="heading unvisible bordered">Ответственный клуб</td>
                 <td  class="heading">Результат</td>
               </tr>
-              <tr>
-                <td>25.12.2019</td>
-                <td class="unvisible bordered">Екатеринбург</td>
-                <td class="unvisible bordered">Прайм</td>
-                <td>1 дан</td>
-              </tr>
+              <!-- Here wil be new rows with info about seminar. It's add with JS. -->
             </table>
           </div>
           
@@ -225,4 +220,5 @@
       </div>
   </body>
   <script src = "../js/navbar-swipe.js"></script>
+  <script src = "../js/profile.js"></script>
 </html>
