Исправлена функция загрузки профиля
Добавлены обновления фото профиля и логотипа клуба

--- a/Frontend/html/profile.html
+++ b/Frontend/html/profile.html
@@ -50,7 +50,7 @@
               <h2 class="row" id="surname">Топаев</h2>
               <h3 class="row" id="birthdate">05.09.1983</h3>
               <div class="row w-75 logo"> 
-                <img src="../assets/logo_club.png" alt="logo_club" class="col-10 col-md-6">
+                <img src="../assets/clubs_logo/Практика.png" alt="logo_club" class="col-10 col-md-6" id="club-photo">
               </div>
             </div>
             <div class="belt-id col-12 col-md-3">
