Изменена авторизация, добавлено скрытие служебных кнопок в профиле

--- a/Frontend/html/profile.html
+++ b/Frontend/html/profile.html
@@ -31,9 +31,13 @@
                 <div class="description"><a href="#" class="text-a">Контакты</a></div>
                 <div class="icon"><a href="#"><img src="../assets/contacts.png"></a></div>
             </div>
-            <div class="btn">
-                <div class="description"><a href="#" class="text-a">Служебная</a></div>
-                <div class="icon"><a href="#"><img src="../assets/service.png"></a></div>
+            <div class="btn" id="trainer-button">
+                <div class="description"><a href="service_page.html" class="text-a">Служебная</a></div>
+                <div class="icon"><a href="service_page.html"><img src="../assets/service.png"></a></div>
+            </div>
+            <div class="btn" id="admin-button">
+                <div class="description"><a href="admin-page-main.html" class="text-a">Админка</a></div>
+                <div class="icon"><a href="admin-page-main.html"><img src="../assets/admin-icon.png"></a></div>
             </div>
             <img id="logo" src="../assets/logo_federation.png" alt="LOGO">
             <div class="exit-btn">
@@ -50,7 +54,7 @@
               <h2 class="row" id="surname">Топаев</h2>
               <h3 class="row" id="birthdate">05.09.1983</h3>
               <div class="row w-75 logo"> 
-                <img src="../assets/clubs_logo/default.png" alt="logo_club" class="col-10 col-md-6" id="club-photo">
+                <img src="../assets/clubs_logo/default.png" alt="../assets/clubs_logo/default.png" class="col-10 col-md-6" id="club-photo">
               </div>
             </div>
             <div class="belt-id col-12 col-md-3">
