--- a/Frontend/html/seminar_statistic.html
+++ b/Frontend/html/seminar_statistic.html
@@ -69,7 +69,7 @@
 
 </body>
 <script src="../js/seminar-statistic-toogle-table.js"></script>
-<script src="../js/get-seminar-info.js"></script>
+<script src="../js/get-seminar-base-info.js"></script>
 <script src="../js/download-file.js"></script>
 <script src="../js/upload-file.js"></script>
 </html>
