--- a/Frontend/html/service_page.html
+++ b/Frontend/html/service_page.html
@@ -41,52 +41,53 @@
             </nav>
         </div>
         <div class="content">
-            <div>
+            <div class="theTOP">
                 <div class="container">
                     <div class="row base-info">
                         <div class="col-6 md-col-2 fio">
-                            <h3 class="row">Евгений</h3>
-                            <h2 class="row">Топаев</h2>
-                            <button class="col-4 col-md-5 belt-id">ID #0001</button>
+                            <h3 class="row" id="name">Евгений</h3>
+                            <h2 class="row" id="surname">Топаев</h2>
+                            <button class="col-4 col-md-5 belt-id" id="id">ID #0001</button>
                         </div>
                     </div>
-                </div>
+
                 <div class="container license_info">
                     <div class="bordered">
                         <table>
                             <tr>
                                 <td class="license" style="width: 10%;">Лицензия:</td>
-                                <td style="width: 5%; font-size: large"><b>№12/21</b></td>
+                                <td style="width: 5%; font-size: large"><b id="license-num">№12/21</b></td>
                             </tr>
                             <tr>
                                 <td>Действительная до:</td>
-                                <td><b> 31.12.2021</b></td>
+                                <td><b id="validity"> 31.12.2021</b></td>
                             </tr>
                             <tr>
                                 <td>Аттестация до:</td>
-                                <td><b> 1 кю</b></td>
+                                <td><b id="attestation-level"> 1 кю</b></td>
                             </tr>
                         </table>
                     </div>
+                </div>
                 </div>
                 <div class="container club_info">
                     <div class="bordered">
                         <table>
                             <tr>
                                 <td style="width: 5%;"><b> Регион</b></td>
-                                <td class="bordered-3" style="width: 15%;">Свердловская область</td>
+                                <td class="bordered-3" style="width: 15%;" id="region">Свердловская область</td>
                             </tr>
                             <tr>
                                 <td><b> Город</b></td>
-                                <td class="bordered-3">Екатеринбург</td>
+                                <td class="bordered-3" id="city">Екатеринбург</td>
                             </tr>
                             <tr>
                                 <td><b>Клуб</b></td>
-                                <td class="bordered-3">Прайм</td>
+                                <td class="bordered-3" id="club">Прайм</td>
                             </tr>
                             <tr>
                                 <td><b> Количество учеников</b></td>
-                                <td class="bordered-3">35</td>
+                                <td class="bordered-3" id="stud-count">35</td>
                             </tr>
                         </table>
                     </div>
@@ -101,29 +102,11 @@
                 </div>
                 <div class="bordered upcom_sem">
                     <table>
-                        <tr>
+                        <tr id="coming-activities-header">
                             <th style="width: 180px;">Дата</th>
                             <th style="width: 240px;">Город</th>
                             <th style="width: 350px;">Ответственный клуб</th>
                             <th style="width: 180px;"></th>
-                        </tr>
-                        <tr>
-                            <td>25-26 декабря</td>
-                            <td class="bordered-3">г.Екатеринбург</td>
-                            <td class="bordered-3"></td>
-                            <td class="bordered-3"><button type="button" name="change_application" class="change_application">Изменить заявку</button></td>
-                        </tr>
-                        <tr>
-                            <td>26-27 декабря</td>
-                            <td class="bordered-3">г.Екатеринбург</td>
-                            <td class="bordered-3"></td>
-                            <td class="bordered-3"><button type="button" name="apply" class="apply">Подать заявку</button></td>
-                        </tr>
-                        <tr>
-                            <td>27-28 декабря</td>
-                            <td class="bordered-3">г.Екатеринбург</td>
-                            <td class="bordered-3"></td>
-                            <td class="bordered-3"></td>
                         </tr>
                     </table>
                 </div>
@@ -137,17 +120,11 @@
                 </div>
                 <div class="bordered past_sem">
                     <table>
-                        <tr>
+                        <tr id="preview-activities-header">
                             <th style="width: 180px;">Дата</th>
                             <th style="width: 240px;">Город</th>
                             <th style="width: 350px;">Ответственный клуб</th>
                             <th style="width: 180px;"></th>
-                        </tr>
-                        <tr>
-                            <td>24-25 декабря</td>
-                            <td class="bordered-3">г.Екатеринбург</td>
-                            <td class="bordered-3"></td>
-                            <td class="bordered-3"><button type="button" name="download_sheet" class="download_sheet">Скачать ведомость</button></td>
                         </tr>
                     </table>
                 </div>
@@ -159,76 +136,9 @@
                     </div>
                 </div>
                 <div class="bordered list_stud">
-                    <table>
-                        <tr>
-                            <td class="fio-2" style="width: 320px;">Гришин Иван</td>
-                            <td class="bordered-3" style="width: 400px;"><div class="degree ku-3 row col-12 col-md-8">
-                                <div class="col-2 row abc">3 кю</div><div class="col-3 date">26.12.20</div>
-                            </div></td>
-                            <td class="bordered-3" style="width: 250px;"><button class="col-4 col-md-5 belt-id-1">#1234</button></td>
-                        </tr>
-                        <tr>
-                            <td class="fio-2">Гусева Вера</td>
-                            <td class="bordered-3" style="width: 300px;"><div class="degree ku-1 row col-12 col-md-8">
-                                <div class="col-2 row abc">1 кю</div><div class="col-3 date">26.12.20</div>
-                            </div></td>
-                            <td class="bordered-3" style="width: 400px;"><button class="col-4 col-md-5 belt-id-1">#1235</button></td>
-                        </tr>
-                        <tr>
-                            <td class="fio-2">Зверев Платон</td>
-                            <td class="bordered-3" style="width: 300px;"><div class="degree ku-4 row col-12 col-md-8">
-                                <div class="col-2 row abc">4 кю</div><div class="col-3 date">26.12.20</div>
-                            </div></td>
-                            <td class="bordered-3" style="width: 400px;"><button class="col-4 col-md-5 belt-id-1">#1236</button></td>
-                        </tr>
-                        <tr>
-                            <td class="fio-2">Львов Гордей</td>
-                            <td class="bordered-3" style="width: 300px;"><div class="degree ku-2 row col-12 col-md-8">
-                                <div class="col-2 row abc">2 кю</div><div class="col-3 date">26.12.20</div>
-                            </div></td>
-                            <td class="bordered-3" style="width: 400px;"><button class="col-4 col-md-5 belt-id-1">#1237</button></td>
-                        </tr>
-                        <tr>
-                            <td class="fio-2">Павловская Алия</td>
-                            <td class="bordered-3" style="width: 300px;"><div class="degree ku-3 row col-12 col-md-8">
-                                <div class="col-2 row abc">3 кю</div><div class="col-3 date">26.12.20</div>
-                            </div></td>
-                            <td class="bordered-3" style="width: 400px;"><button class="col-4 col-md-5 belt-id-1">#1238</button></td>
-                        </tr>
-                        <tr>
-                            <td class="fio-2">Панкратова Ксения</td>
-                            <td class="bordered-3" style="width: 300px;"><div class="degree ku-3 row col-12 col-md-8">
-                                <div class="col-2 row abc">3 кю</div><div class="col-3 date">26.12.20</div>
-                            </div></td>
-                            <td class="bordered-3" style="width: 400px;"><button class="col-4 col-md-5 belt-id-1">#1239</button></td>
-                        </tr>
-                        <tr>
-                            <td class="fio-2">Попов Марк</td>
-                            <td class="bordered-3" style="width: 300px;"><div class="degree ku-2 row col-12 col-md-8">
-                                <div class="col-2 row abc">2 кю</div><div class="col-3 date">26.12.20</div>
-                            </div></td>
-                            <td class="bordered-3" style="width: 400px;"><button class="col-4 col-md-5 belt-id-1">#1240</button></td>
-                        </tr>
-                        <tr>
-                            <td class="fio-2">Романов Мирон</td>
-                            <td class="bordered-3" style="width: 300px;"><div class="degree ku-3 row col-12 col-md-8">
-                                <div class="col-2 row abc">3 кю</div><div class="col-3 date">26.12.20</div>
-                            </div></td>
-                            <td class="bordered-3" style="width: 400px;"><button class="col-4 col-md-5 belt-id-1">#1241</button></td>
-                        </tr>
-                        <tr>
-                            <td class="fio-2">Сергеева Кристина</td>
-                            <td class="bordered-3" style="width: 300px;"><div class="degree ku-4 row col-12 col-md-8">
-                                <div class="col-2 row abc">4 кю</div><div class="col-3 date">26.12.20</div>
-                            </div></td>
-                            <td class="bordered-3" style="width: 400px;"><button class="col-4 col-md-5 belt-id-1">#1242</button></td>
-                        </tr>
-                        <tr>
-                            <td class="fio-2">Щербаков Михаил</td>
-                            <td class="bordered-3" style="width: 300px;"><div class="degree ku-5 row col-12 col-md-8">
-                                <div class="col-2 row abc">5 кю</div><div class="col-3 date">26.12.20</div>
-                            </div></td>
-                            <td class="bordered-3" style="width: 400px;"><button class="col-4 col-md-5 belt-id-1">#1243</button></td>
+                    <table id="students">
+                        <tr id="default-row">
+                           <td id="default_value"></td>
                         </tr>
                     </table>
                 </div>
@@ -238,4 +148,7 @@
 
 </body>
 <script src = "../js/navbar-swipe.js"></script>
+<script src="../js/service-page.js"></script>
+<script src="../js/service-page-seminar.js"></script>
+<script src="../js/service-page-stud.js"></script>
 </html>
