Фикс мелких багов меню и профиля

--- a/Frontend/html/profile.html
+++ b/Frontend/html/profile.html
@@ -16,8 +16,8 @@
           <a href="#" class="menu-btn"></a>
           <nav class="container menu-list">
             <div class="btn">
-                <div class="description"><a href="#" class="text-a">Мой профиль</a></div>
-                <div class="icon"><a href="#"><img src="../assets/home.png"></a></div>
+                <div class="description"><a href="profile.html" class="text-a">Мой профиль</a></div>
+                <div class="icon"><a href="profile.html"><img src="../assets/home.png"></a></div>
             </div>
             <div class="btn">
                 <div class="description"><a href="#" class="text-a">Семинары</a></div>
@@ -41,8 +41,8 @@
             </div>
             <img id="logo" src="../assets/logo_federation.png" alt="LOGO">
             <div class="exit-btn">
-                <div class="description"><a href="#" class="text-a">Выйти</a></div>
-                <div class="icon"><a href="#"><img src="../assets/exit-icon.png"></a></div>
+                <div class="description"><a href="authorization.html" class="text-a">Выйти</a></div>
+                <div class="icon"><a href="authorization.html"><img src="../assets/exit-icon.png"></a></div>
             </div>
           </nav>
         </div>
@@ -50,16 +50,16 @@
           <div class="row base-info">
             <img src="../assets/photo1.jpg" alt="" class="col-sm-6 col-md-3 photo" id="photo">
             <div class="col-6 md-col-2 fio"> 
-              <h3 class="row" id="name">Евгений</h3>
-              <h2 class="row" id="surname">Топаев</h2>
-              <h3 class="row" id="birthdate">05.09.1983</h3>
+              <h3 class="row" id="name">Неизвестная</h3>
+              <h2 class="row" id="surname">Личность</h2>
+              <h3 class="row" id="birthdate">6.6.666</h3>
               <div class="row w-75 logo"> 
                 <img src="../assets/clubs_logo/default.png" alt="../assets/clubs_logo/default.png" class="col-10 col-md-6" id="club-photo">
               </div>
             </div>
             <div class="belt-id col-12 col-md-3">
               <img src="../assets/black_belt.jpg" alt="belt" class="col-5 col-md-12">
-              <button class="col-4 col-md-12" id="id-button">ID #0001</button>
+              <button class="col-4 col-md-12" id="id-button">ID #0000</button>
             </div>
           </div>
           <div class="row container achievment">
@@ -225,4 +225,5 @@
   </body>
   <script src = "../js/navbar-swipe.js"></script>
   <script src = "../js/profile.js"></script>
+  <script src="../js/set-status-ability-to-menu.js"></script>
 </html>
