--- a/Frontend/html/authorization.html
+++ b/Frontend/html/authorization.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/auth-style.css">
+    <script src="../js/clear-session-storage.js"></script>
 </head>
 <body>
     <div class="row">
