--- a/Frontend/html/create_aplication.html
+++ b/Frontend/html/create_aplication.html
@@ -12,35 +12,39 @@
 <body>
 <div class="wrapper">
   <div class="menu">
-    <a href="#" class="menu-btn"></a>
-    <nav class="container menu-list">
-      <div class="btn">
-        <div class="description"><a href="#" class="text-a">Мой профиль</a></div>
-        <div class="icon"><a href="#"><img src="../assets/home.png"></a></div>
-      </div>
-      <div class="btn">
-        <div class="description"><a href="#" class="text-a">Семинары</a></div>
-        <div class="icon"><a href="#"><img src="../assets/competition.png"></a></div>
-      </div>
-      <div class="btn">
-        <div class="description"><a href="#" class="text-a">Статьи</a></div>
-        <div class="icon"><a href="#"><img src="../assets/articles.png"></a></div>
-      </div>
-      <div class="btn">
-        <div class="description"><a href="#" class="text-a">Контакты</a></div>
-        <div class="icon"><a href="#"><img src="../assets/contacts.png"></a></div>
-      </div>
-      <div class="btn">
-        <div class="description"><a href="#" class="text-a">Служебная</a></div>
-        <div class="icon"><a href="#"><img src="../assets/service.png"></a></div>
-      </div>
-      <img id="logo" src="../assets/logo_federation.png" alt="LOGO">
-      <div class="exit-btn">
-        <div class="description"><a href="#" class="text-a">Выйти</a></div>
-        <div class="icon"><a href="#"><img src="../assets/exit-icon.png"></a></div>
-      </div>
-    </nav>
-  </div>
+          <a href="#" class="menu-btn"></a>
+          <nav class="container menu-list">
+            <div class="btn">
+                <div class="description"><a href="profile.html" class="text-a">Мой профиль</a></div>
+                <div class="icon"><a href="#"><img src="../assets/home.png"></a></div>
+            </div>
+            <div class="btn">
+                <div class="description"><a href="#" class="text-a">Семинары</a></div>
+                <div class="icon"><a href="#"><img src="../assets/competition.png"></a></div>
+            </div>
+            <div class="btn">
+                <div class="description"><a href="#" class="text-a">Статьи</a></div>
+                <div class="icon"><a href="#"><img src="../assets/articles.png"></a></div>
+            </div>
+            <div class="btn">
+                <div class="description"><a href="#" class="text-a">Контакты</a></div>
+                <div class="icon"><a href="#"><img src="../assets/contacts.png"></a></div>
+            </div>
+            <div class="btn" id="trainer-button">
+                <div class="description"><a href="service_page.html" class="text-a">Служебная</a></div>
+                <div class="icon"><a href="service_page.html"><img src="../assets/service.png"></a></div>
+            </div>
+            <div class="btn" id="admin-button">
+                <div class="description"><a href="admin-page-main.html" class="text-a">Админка</a></div>
+                <div class="icon"><a href="admin-page-main.html"><img src="../assets/admin-icon.png"></a></div>
+            </div>
+            <img id="logo" src="../assets/logo_federation.png" alt="LOGO">
+            <div class="exit-btn">
+                <div class="description"><a href="authorization.html" class="text-a">Выйти</a></div>
+                <div class="icon"><a href="authorization.html"><img src="../assets/exit-icon.png"></a></div>
+            </div>
+          </nav>
+        </div>
 
   <div class="container content">
     <!-- here js will insert activity's base info block (name, date, etc)-->
@@ -114,4 +118,5 @@
 <script src="../js/get-event-member-info.js"></script>
 <script src="../js/insert-new-members.js"></script>
 <script src="../js/send_participant_list.js"></script>
+<script src="../js/set-status-ability-to-menu.js"></script>
 </html>
