--- a/Frontend/html/create_aplication.html
+++ b/Frontend/html/create_aplication.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/menu-style.css">
   <link rel="stylesheet" href="../css/create_application-style.css">
-
+  <script src="../js/go-to-auth-error-enter.js"></script>
 </head>
 <body>
 <div class="wrapper">
