--- a/Frontend/html/profile.html
+++ b/Frontend/html/profile.html
@@ -7,8 +7,8 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
       <link rel="stylesheet" href="../css/profile-style.css">
       <link rel="stylesheet" href="../css/menu-style.css">
-
-      
+      <script src="../js/go-to-auth-error-enter.js"></script>
+      <script src="../js/go-to-auth-error-enter.js"></script>
 </head>
   <body>
      <div class="wrapper">
