--- a/Frontend/html/seminar_statistic.html
+++ b/Frontend/html/seminar_statistic.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/seminar-style.css">
+    <script src="../js/go-to-auth-error-enter.js"></script>
 </head>
 <body>
     <!-- here js will insert activity's base info block (name, date, etc)-->
