--- a/Frontend/html/service_page.html
+++ b/Frontend/html/service_page.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/service-page-style.css">
     <link rel="stylesheet" href="../css/menu-style.css">
+    <script src="../js/go-to-auth-error-enter.js"></script>
 </head>
 <body>
     <div class="wrapper">
