Фикс авторизации в 2 клика

--- a/Frontend/html/authorization.html
+++ b/Frontend/html/authorization.html
@@ -16,7 +16,7 @@
                 <input type="text" placeholder="ID пользователя" id = "id" class="input-field row">
                 <input type="password" placeholder="Пароль" id = "pass" class="input-field row">
                 <p class="error-message hide">Неверная связка id/пароль</p>
-                <input type="submit" value="Войти" class="enter-button row">
+                <input type="button" value="Войти" class="enter-button row">
             </form>
         </div>
         <div class="col-sm-12 col-md-4 vh-100 info-block">
