Добавлена проверка даты при добавлении новичков

--- a/Frontend/html/adding_new_members.html
+++ b/Frontend/html/adding_new_members.html
@@ -51,7 +51,7 @@
                             <td><input type="text" name="surname[0]" placeholder="Фамилия"></td>
                             <td><input type="text" name="name[0]" placeholder="Имя"></td>
                             <td><input type="text" name="second_name[0]" placeholder="Отчество"></td>
-                            <td><input type="text" name="birthdate[0]" placeholder="ДР"></td>
+                            <td><input type="date" name="birthdate[0]" placeholder="ДР"></td>
                         </tr>
                         </tbody>
                     </table>
