--- a/Frontend/html/seminar_statistic.html
+++ b/Frontend/html/seminar_statistic.html
@@ -12,7 +12,7 @@
     <!-- here js will insert activity's base info block (name, date, etc)-->
 
     <div class="row" id="buttons-block">
-        <button class="download col-6 col-md-6 col-lg-6" id="download">Скачать список участников</button>
+        <a class="download col-6 col-md-6 col-lg-6" id="download">Скачать список участников</a>
         <!--<button class="upload col-6 col-md-6 col-lg-6">Загрузить отчет</button>-->
         <input type="file" class="input-file" id="upload">
         <label for="upload" class="form-control-file upload col-6 col-md-6 col-lg-6">
