Исправлены мелкие баги переходов и форм

--- a/Frontend/html/adding_new_members.html
+++ b/Frontend/html/adding_new_members.html
@@ -34,8 +34,8 @@
                 </div>
                 <img id="logo" src="../assets/logo_federation.png" alt="LOGO">
                 <div class="exit-btn">
-                    <div class="description"><a href="#" class="text-a">Выйти</a></div>
-                    <div class="icon"><a href="#"><img src="../assets/exit-icon.png"></a></div>
+                    <div class="description"><a href="authorization.html" class="text-a">Выйти</a></div>
+                    <div class="icon"><a href="authorization.html"><img src="../assets/exit-icon.png"></a></div>
                 </div>
             </nav>
         </div>
