Вывод для тренера инфы (id pass) по ученикам

--- a/Frontend/html/service_page.html
+++ b/Frontend/html/service_page.html
@@ -147,6 +147,7 @@
                         </tr>
                     </table>
                 </div>
+                <button class="table-button" onclick="location.href = 'show-all-studs-data.html'">Посмотреть все данные учеников</button>
             </div>
         </div>
     </div>
