Добавлены названия меро в таблицы

--- a/Frontend/html/service_page.html
+++ b/Frontend/html/service_page.html
@@ -109,6 +109,7 @@
                     <table>
                         <tr id="coming-activities-header">
                             <th style="width: 180px;">Дата</th>
+                            <th style="width: 200px;">Название</th>
                             <th style="width: 240px;">Город</th>
                             <th style="width: 350px;">Ответственный клуб</th>
                             <th style="width: 180px;"></th>
@@ -127,6 +128,7 @@
                     <table>
                         <tr id="preview-activities-header">
                             <th style="width: 180px;">Дата</th>
+                            <th style="width: 200px;">Название</th>
                             <th style="width: 240px;">Город</th>
                             <th style="width: 350px;">Ответственный клуб</th>
                             <th style="width: 180px;"></th>
