Добавлена страница вывода всех данных акков в базе

--- a/Frontend/html/show-all-studs-data.html
+++ b/Frontend/html/show-all-studs-data.html
@@ -62,4 +62,5 @@
 <script src = "../js/navbar-swipe.js"></script>
 <script src="../js/set-status-ability-to-menu.js"></script>
 <script src="../js/show-all-stud-data.js"></script>
+<script>getTrainerStudents("http://localhost:8000/api/v1/account/trainer_students/")</script>
 </html>
