--- a/Frontend/html/admin-page-main.html
+++ b/Frontend/html/admin-page-main.html
@@ -12,13 +12,15 @@
 <body>
     <div class="container" id="coming-activities">
         <div class="row justify-content-center">
+                <div class="col-3 ">
+                    <button type="button" name="create_events" class="create_events" onClick='location.href="show-all-data.html"'>Данные участников</button>
+                </div>
                 <p class="col-4 heading ">
                     Предстоящие семинары
                 </p>
 
                 <div class="col-3 ">
                     <button type="button" name="create_events" class="create_events" onClick='location.href="creation_of_event.html"'>Создать мероприятие</button>
-
                 </div>
         </div>
         <div class="bordered">
