Смена поясов (картинок) в профиле

--- a/Frontend/html/profile.html
+++ b/Frontend/html/profile.html
@@ -58,7 +58,7 @@
               </div>
             </div>
             <div class="belt-id col-12 col-md-3">
-              <img src="../assets/black_belt.jpg" alt="belt" class="col-5 col-md-12">
+              <img src="../assets/belts/black_belt.jpg" alt="belt" class="col-5 col-md-12" id="belt-img">
               <button class="col-4 col-md-12" id="id-button">ID #0000</button>
             </div>
           </div>
