Скриптовое появление меню
Меню появляется по скрипту menu-inserting перед блоком ".container"

--- a/Frontend/html/profile.html
+++ b/Frontend/html/profile.html
@@ -3,49 +3,12 @@
   <head>
       <meta charset="UTF-8">
       <title>Мой профиль</title>
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
       <link rel="stylesheet" href="../css/profile-style.css">
-      <link rel="stylesheet" href="../css/menu-style.css">
-      <script src="../js/go-to-auth-error-enter.js"></script>
-      <script src="../js/go-to-auth-error-enter.js"></script>
+<!--      <script src="../js/go-to-auth-error-enter.js"></script>-->
 </head>
   <body>
      <div class="wrapper">
-        <div class="menu">
-          <a href="#" class="menu-btn"></a>
-          <nav class="container menu-list">
-            <div class="btn">
-                <div class="description"><a href="profile.html" class="text-a">Мой профиль</a></div>
-                <div class="icon"><a href="profile.html"><img src="../assets/home.png"></a></div>
-            </div>
-            <div class="btn">
-                <div class="description"><a href="#" class="text-a">Семинары</a></div>
-                <div class="icon"><a href="#"><img src="../assets/competition.png"></a></div>
-            </div>
-            <div class="btn">
-                <div class="description"><a href="#" class="text-a">Статьи</a></div>
-                <div class="icon"><a href="#"><img src="../assets/articles.png"></a></div>
-            </div>
-            <div class="btn">
-                <div class="description"><a href="#" class="text-a">Контакты</a></div>
-                <div class="icon"><a href="#"><img src="../assets/contacts.png"></a></div>
-            </div>
-            <div class="btn" id="trainer-button">
-                <div class="description"><a href="service_page.html" class="text-a">Служебная</a></div>
-                <div class="icon"><a href="service_page.html"><img src="../assets/service.png"></a></div>
-            </div>
-            <div class="btn" id="admin-button">
-                <div class="description"><a href="admin-page-main.html" class="text-a">Админка</a></div>
-                <div class="icon"><a href="admin-page-main.html"><img src="../assets/admin-icon.png"></a></div>
-            </div>
-            <img id="logo" src="../assets/logo_federation.png" alt="LOGO">
-            <div class="exit-btn">
-                <div class="description"><a href="authorization.html" class="text-a">Выйти</a></div>
-                <div class="icon"><a href="authorization.html"><img src="../assets/exit-icon.png"></a></div>
-            </div>
-          </nav>
-        </div>
+       <!-- Menu inserting here by JS -->
         <div class="container content">
           <div class="row base-info">
             <img src="../assets/photo1.jpg" alt="" class="col-sm-6 col-md-3 photo" id="photo">
@@ -223,7 +186,8 @@
         </div>
       </div>
   </body>
-  <script src = "../js/navbar-swipe.js"></script>
+  <script src="../js/menu-inserting.js"></script>
   <script src = "../js/profile.js"></script>
   <script src="../js/set-status-ability-to-menu.js"></script>
+
 </html>
