--- a/Frontend/html/adding_new_members.html
+++ b/Frontend/html/adding_new_members.html
@@ -9,36 +9,7 @@
 </head>
 <body>
     <div class="wrapper abc">
-        <div class="menu">
-            <a href="#" class="menu-btn"></a>
-            <nav class="container menu-list">
-                <div class="btn">
-                    <div class="description"><a href="#" class="text-a">Мой профиль</a></div>
-                    <div class="icon"><a href="#"><img src="../assets/home.png"></a></div>
-                </div>
-                <div class="btn">
-                    <div class="description"><a href="#" class="text-a">Семинары</a></div>
-                    <div class="icon"><a href="#"><img src="../assets/competition.png"></a></div>
-                </div>
-                <div class="btn">
-                    <div class="description"><a href="#" class="text-a">Статьи</a></div>
-                    <div class="icon"><a href="#"><img src="../assets/articles.png"></a></div>
-                </div>
-                <div class="btn">
-                    <div class="description"><a href="#" class="text-a">Контакты</a></div>
-                    <div class="icon"><a href="#"><img src="../assets/contacts.png"></a></div>
-                </div>
-                <div class="btn">
-                    <div class="description"><a href="#" class="text-a">Служебная</a></div>
-                    <div class="icon"><a href="#"><img src="../assets/service.png"></a></div>
-                </div>
-                <img id="logo" src="../assets/logo_federation.png" alt="LOGO">
-                <div class="exit-btn">
-                    <div class="description"><a href="authorization.html" class="text-a">Выйти</a></div>
-                    <div class="icon"><a href="authorization.html"><img src="../assets/exit-icon.png"></a></div>
-                </div>
-            </nav>
-        </div>
+
         <div class="container content">
             <div class="heading">
                 Добавление новых участников
@@ -66,7 +37,7 @@
         </div>
     </div>
 </body>
-<script src = "../js/navbar-swipe.js"></script>
+<script src="../js/menu-inserting.js"></script>
 <script src="../js/new-input-appear.js"></script>
 <script src="../js/adding-new-members.js"></script>
 </html>
