--- a/Frontend/html/show-all-studs-data.html
+++ b/Frontend/html/show-all-studs-data.html
@@ -10,40 +10,6 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="menu">
-          <a href="#" class="menu-btn"></a>
-          <nav class="container menu-list">
-            <div class="btn">
-                <div class="description"><a href="profile.html" class="text-a">Мой профиль</a></div>
-                <div class="icon"><a href="profile.html"><img src="../assets/home.png"></a></div>
-            </div>
-            <div class="btn">
-                <div class="description"><a href="#" class="text-a">Семинары</a></div>
-                <div class="icon"><a href="#"><img src="../assets/competition.png"></a></div>
-            </div>
-            <div class="btn">
-                <div class="description"><a href="#" class="text-a">Статьи</a></div>
-                <div class="icon"><a href="#"><img src="../assets/articles.png"></a></div>
-            </div>
-            <div class="btn">
-                <div class="description"><a href="#" class="text-a">Контакты</a></div>
-                <div class="icon"><a href="#"><img src="../assets/contacts.png"></a></div>
-            </div>
-            <div class="btn" id="trainer-button">
-                <div class="description"><a href="service_page.html" class="text-a">Служебная</a></div>
-                <div class="icon"><a href="service_page.html"><img src="../assets/service.png"></a></div>
-            </div>
-            <div class="btn" id="admin-button">
-                <div class="description"><a href="admin-page-main.html" class="text-a">Админка</a></div>
-                <div class="icon"><a href="admin-page-main.html"><img src="../assets/admin-icon.png"></a></div>
-            </div>
-            <img id="logo" src="../assets/logo_federation.png" alt="LOGO">
-            <div class="exit-btn">
-                <div class="description"><a href="authorization.html" class="text-a">Выйти</a></div>
-                <div class="icon"><a href="authorization.html"><img src="../assets/exit-icon.png"></a></div>
-            </div>
-          </nav>
-        </div>
         <div class="content container-fluid">
             <h2>Данные ID и пароли для всех ваших учеников</h2>
             <div class="bordered">
@@ -59,7 +25,7 @@
         </div>
     </div>
 </body>
-<script src = "../js/navbar-swipe.js"></script>
+<script src="../js/menu-inserting.js"></script>
 <script src="../js/set-status-ability-to-menu.js"></script>
 <script src="../js/show-all-stud-data.js"></script>
 <script>getTrainerStudents("http://localhost:8000/api/v1/account/trainer_students/")</script>
