--- a/Frontend/html/profile.html
+++ b/Frontend/html/profile.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <title>Мой профиль</title>
       <link rel="stylesheet" href="../css/profile-style.css">
-<!--      <script src="../js/go-to-auth-error-enter.js"></script>-->
+      <script src="../js/go-to-auth-error-enter.js"></script>
 </head>
   <body>
      <div class="wrapper">
